--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
     "npm": ">=5"
   },
   "scripts": {
-    "start": "concurrently -r -k -s all \"docz dev\" \"yarn run lint:watch\"",
-    "demo": "concurrently -r -k -s all \"rollup --config rollup.config.demo.js --watch\" \"yarn run lint:watch\"",
+    "start": "concurrently -r -k -s all \"docz dev\" \"npm run lint:watch\"",
+    "demo": "concurrently -r -k -s all \"rollup --config rollup.config.demo.js --watch\" \"npm run lint:watch\"",
     "lint:fix": "eslint src/* --fix",
     "lint:watch": "esw --watch --fix src/*",
     "test": "cross-env CI=1 react-scripts test --env=jsdom",
     "test:watch": "react-scripts test --env=jsdom",
-    "prebuild": "yarn run lint:fix",
+    "prebuild": "npm run lint:fix",
     "build": "rollup -c",
     "build-doc": "docz build",
     "deploy-doc": "gh-pages -d demo"
@@ -38,9 +38,8 @@
     "resize-observer-polyfill": "1.5.0"
   },
   "peerDependencies": {
-    "prop-types": "^15.5.4",
-    "react": "15 - 17",
-    "react-dom": "15 - 17",
+    "react": "15 - 18",
+    "react-dom": "15 - 18",
     "styled-components": "^5.1.0"
   },
   "devDependencies": {
